# embedded-rag-pdf

./: .env.example  .gitignore  README.md  config.py  custom_types.py  data_loader.py  interface.py  main.py  pyproject.toml  vector_db.py
